Overflow fix?

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
-
-
+html {
+    overflow: hidden;
+}
 body {
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
